[gd_scene load_steps=67 format=2]

[ext_resource path="res://img/gato6/0.png" type="Texture" id=1]
[ext_resource path="res://img/gato6/1.png" type="Texture" id=2]
[ext_resource path="res://img/gato6/2.png" type="Texture" id=3]
[ext_resource path="res://img/gato6/9.png" type="Texture" id=4]
[ext_resource path="res://img/gato6/10.png" type="Texture" id=5]
[ext_resource path="res://img/gato6/11.png" type="Texture" id=6]
[ext_resource path="res://img/gato6/6.png" type="Texture" id=7]
[ext_resource path="res://img/gato6/8.png" type="Texture" id=8]
[ext_resource path="res://img/gato6/7.png" type="Texture" id=9]
[ext_resource path="res://sound/maullido_cat.wav" type="AudioStream" id=10]
[ext_resource path="res://fuentes/Pocket Money.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://img/gato2/8.png" type="Texture" id=12]
[ext_resource path="res://img/gato2/7.png" type="Texture" id=13]
[ext_resource path="res://img/gato2/0.png" type="Texture" id=14]
[ext_resource path="res://img/gato2/1.png" type="Texture" id=15]
[ext_resource path="res://img/gato2/2.png" type="Texture" id=16]
[ext_resource path="res://img/gato2/9.png" type="Texture" id=17]
[ext_resource path="res://img/gato2/10.png" type="Texture" id=18]
[ext_resource path="res://img/gato2/6.png" type="Texture" id=19]
[ext_resource path="res://img/gato2/11.png" type="Texture" id=20]
[ext_resource path="res://img/gato3/11.png" type="Texture" id=21]
[ext_resource path="res://img/gato3/0.png" type="Texture" id=22]
[ext_resource path="res://img/gato3/2.png" type="Texture" id=23]
[ext_resource path="res://img/gato3/9.png" type="Texture" id=24]
[ext_resource path="res://img/gato3/1.png" type="Texture" id=25]
[ext_resource path="res://img/gato3/10.png" type="Texture" id=26]
[ext_resource path="res://img/gato3/7.png" type="Texture" id=27]
[ext_resource path="res://script/Admin.gd" type="Script" id=28]
[ext_resource path="res://img/gato3/8.png" type="Texture" id=29]
[ext_resource path="res://img/Gato/11.png" type="Texture" id=30]
[ext_resource path="res://img/gato4/7.png" type="Texture" id=31]
[ext_resource path="res://img/gato4/0.png" type="Texture" id=32]
[ext_resource path="res://img/gato4/1.png" type="Texture" id=33]
[ext_resource path="res://img/gato4/8.png" type="Texture" id=34]
[ext_resource path="res://img/gato5/0.png" type="Texture" id=35]
[ext_resource path="res://img/gato3/6.png" type="Texture" id=36]
[ext_resource path="res://img/gato4/2.png" type="Texture" id=37]
[ext_resource path="res://img/gato4/9.png" type="Texture" id=38]
[ext_resource path="res://img/gato4/11.png" type="Texture" id=39]
[ext_resource path="res://img/gato4/10.png" type="Texture" id=40]
[ext_resource path="res://img/gato4/6.png" type="Texture" id=41]
[ext_resource path="res://img/Gato/0.png" type="Texture" id=42]
[ext_resource path="res://img/gato5/2.png" type="Texture" id=43]
[ext_resource path="res://img/gato5/6.png" type="Texture" id=44]
[ext_resource path="res://img/gato5/8.png" type="Texture" id=45]
[ext_resource path="res://img/gato5/9.png" type="Texture" id=46]
[ext_resource path="res://img/gato5/1.png" type="Texture" id=47]
[ext_resource path="res://img/gato5/7.png" type="Texture" id=48]
[ext_resource path="res://img/gato5/10.png" type="Texture" id=49]
[ext_resource path="res://img/gato5/11.png" type="Texture" id=50]
[ext_resource path="res://img/Gato/9.png" type="Texture" id=51]
[ext_resource path="res://img/Gato/10.png" type="Texture" id=52]
[ext_resource path="res://img/Gato/8.png" type="Texture" id=53]
[ext_resource path="res://img/Gato/1.png" type="Texture" id=54]
[ext_resource path="res://img/Gato/2.png" type="Texture" id=55]
[ext_resource path="res://img/Gato/6.png" type="Texture" id=56]
[ext_resource path="res://img/Gato/7.png" type="Texture" id=57]
[ext_resource path="res://sound/tow.ogg" type="AudioStream" id=58]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 51 ), ExtResource( 52 ), ExtResource( 30 ) ],
"loop": true,
"name": "arriba",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 54 ), ExtResource( 55 ) ],
"loop": true,
"name": "abajo",
"speed": 5.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 57 ), ExtResource( 53 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
}, {
"frames": [ ExtResource( 56 ) ],
"loop": true,
"name": "reposo",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 20 ) ],
"loop": true,
"name": "arriba",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "abajo",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "reposo",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 26 ), ExtResource( 21 ) ],
"loop": true,
"name": "arriba",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 25 ), ExtResource( 23 ) ],
"loop": true,
"name": "abajo",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 27 ), ExtResource( 29 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "reposo",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 38 ), ExtResource( 40 ), ExtResource( 39 ) ],
"loop": true,
"name": "arriba",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 37 ) ],
"loop": true,
"name": "abajo",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 31 ), ExtResource( 34 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "reposo",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 46 ), ExtResource( 49 ), ExtResource( 50 ) ],
"loop": true,
"name": "arriba",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 47 ), ExtResource( 43 ) ],
"loop": true,
"name": "abajo",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 48 ), ExtResource( 45 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": true,
"name": "reposo",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "arriba",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "abajo",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "reposo",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 35.0
height = 72.0

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 11 )

[node name="Admin" type="KinematicBody2D" groups=["player"]]
position = Vector2( 389, 213 )
collision_layer = 5
collision_mask = 13
script = ExtResource( 28 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4.044, 4.444 )
frames = SubResource( 1 )
animation = "caminar"
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
scale = Vector2( 4.044, 4.444 )
frames = SubResource( 4 )
animation = "reposo"

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
scale = Vector2( 4.044, 4.444 )
frames = SubResource( 5 )
animation = "reposo"

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
scale = Vector2( 4.044, 4.444 )
frames = SubResource( 6 )
animation = "caminar"

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
scale = Vector2( 4.044, 4.444 )
frames = SubResource( 7 )
animation = "reposo"

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
scale = Vector2( 4.044, 4.444 )
frames = SubResource( 8 )
animation = "caminar"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -30, 19 )
stream = ExtResource( 10 )
volume_db = 24.0

[node name="Name" type="Label" parent="."]
margin_left = -250.0
margin_top = -112.0
margin_right = 234.0
margin_bottom = -57.0
custom_fonts/font = SubResource( 9 )
text = "Name"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 58 )
